force-app/main/default/objects/Song__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <description>Artist who sings this song</description>
    <label>Artist</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>