force-app/main/default/objects/Song__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Genre of song</description>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Funk</fullName>
            </value>
            <value>
                <fullName>Hip hop</fullName>
            </value>
            <value>
                <fullName>K-pop</fullName>
            </value>
            <value>
                <fullName>Latin</fullName>
            </value>
            <value>
                <fullName>Polka</fullName>
            </value>
            <value>
                <fullName>Punk</fullName>
            </value>
            <value>
                <fullName>R&amp;B</fullName>
            </value>
            <value>
                <fullName>Reggae</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>