force-app/main/default/objects/Song__c/fields/Track_Amount__c.field-meta.xml
<CustomField>
    <fullName>Track_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much related tracks alreadt exists: cannot be more than Track Licenses field</description>
    <label>Track Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>