force-app/main/default/objects/Song__c/fields/Track_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Track_Licenses__c</fullName>
    <description>Amount of licenses available for this song: how much times song can be used in Mix</description>
    <label>Track Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>